--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "definiciones.h": "c"
+        "definiciones.h": "c",
+        "perifericos.h": "c",
+        "rutinasatencion.h": "c",
+        "stdio.h": "c",
+        "stdlib.h": "c"
     }
 }
