Actualizar pantalla inicial

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "perifericos.h": "c",
         "rutinasatencion.h": "c",
         "stdio.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "puertaabierta.h": "c"
     }
 }
