Añadir menú del final

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "rutinasatencion.h": "c",
         "stdio.h": "c",
         "stdlib.h": "c",
-        "puertaabierta.h": "c"
+        "puertaabierta.h": "c",
+        "presionabotonincorrecto.h": "c"
     }
 }
